--- a/app/views/layouts/_navigation_dropdown.html.erb
+++ b/app/views/layouts/_navigation_dropdown.html.erb
@@ -4,6 +4,7 @@
 	</a>
 	<ul class="dropdown-menu">
 		<li><%= link_to "People", people_path %></li>
+		<li><%= link_to "Sources", sources_path %></li>
 		<li><%= link_to "Statistics", people_stats_path %></li>
 	</ul>
 </li>
