--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,5 +1,6 @@
 <% flash.each do |type, message| %>
-  <% flash_to_bootstrap = { 'success'=> 'success', 'failure'=> 'danger' } %>
+  <%= "flash type: #{type}" %>
+  <% flash_to_bootstrap = { 'alert'=> 'notice', 'success'=> 'success', 'failure'=> 'danger' } %>
   <div class="alert alert-<%= flash_to_bootstrap[type] %>">
     <%= message %>
   </div>
