--- a/app/views/layouts/_navigation_dropdown.slim
+++ b/app/views/layouts/_navigation_dropdown.slim
@@ -5,4 +5,4 @@ li#fat-menu.dropdown
   ul.dropdown-menu
     li= link_to "People", people_path
     li= link_to "Sources", sources_path
-    li= link_to "Statistics", people_stats_path
+    li= link_to "Statistics", statistics_path
