Moved lifespan chart javascript an css to its own file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 // Components
 @import "3_components/header.scss";
 @import "3_components/footer.scss";
+@import "3_components/charts/lifespan.scss";
 
 // Layouts
 @import "4_layouts/base.scss";
