--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -1,3 +1,6 @@
-footer.footer
+footer.footer.container
   small
-    | Powered by Kinship
+    ' Powered by
+    a href="https://github.com/dkniffin/kinship" Kinship
+
+    
